Updated word abbreviations in names